# test-runner

./: .gitignore  CMakeLists.txt  CatchEventListener.h  main.cpp  rebuild.sh  test_runner.cpp
Catch2/: CMakeLists.txt
test-modules/bar/: CMakeLists.txt  bar.cpp
test-modules/foo/: CMakeLists.txt  foo.cpp
